--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -159,7 +159,7 @@
         <div class="flexslider js-fullheight">
             <ul class="slides">
                 <li style="background-image: url(images/cov.png);">
-                    <div class="overlay"></div>
+                    <div class="overlay">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
@@ -170,6 +170,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 </li>
             </ul>
         </div>
