--- a/Public/meeting-Customer.html
+++ b/Public/meeting-Customer.html
@@ -136,12 +136,11 @@
 							<input type="text" class="form-control" id="location" name="location" required>
 						</div> 
 						<div class="form-group">
-							<label for="partner">Partner:</label>
+							<label for="partner"> Select Partner:</label>
 							<select class="form-control" id="partner" name="partner" required>
-								<option value="">Select Partner</option>
-								<option value="Ovad Zangi">Ovad Zangi</option>
-								<option value="Gil Nissim">Gil Nissim</option>
-							</select>
+								 <option value="">Select Partner</option>
+								<!-- Options will be dynamically populated here -->
+							  </select>
 						</div> 
 						<div class="form-group">
 						<label for="meetingType">Meeting Type:</label>
@@ -259,6 +258,21 @@ document.addEventListener("DOMContentLoaded", function() {
     .catch(error => console.error('Error fetching assets:', error));
 });
 
+
+document.addEventListener("DOMContentLoaded", function() {
+    fetch('/Partners') // שינוי לנתיב המתאים לקבלת השותפים מהשרת
+        .then(response => response.json())
+        .then(data => {
+            const partnerSelect = document.getElementById('partner');
+            data.forEach(partner => {
+                const option = document.createElement('option');
+                option.value = partner.id; // ערך הערך של השותף
+                option.textContent = partner.UserName; // הטקסט המוצג למשתמש
+                partnerSelect.appendChild(option);
+            });
+        })
+        .catch(error => console.error('Error fetching partners:', error));
+});
 
 
 
