--- a/Public/meetingA-Manager.html
+++ b/Public/meetingA-Manager.html
@@ -211,7 +211,8 @@
 	</div>
 
     <script>
-document.addEventListener("DOMContentLoaded", function() {
+ 
+ document.addEventListener("DOMContentLoaded", function () {
     const username = sessionStorage.getItem('username');
     const partnerField = document.getElementById('partner');
     if (username) {
@@ -221,23 +222,23 @@ document.addEventListener("DOMContentLoaded", function() {
     }
 
     fetch('/Assets')
-        .then(response => response.json())
-        .then(data => {
-            const assetSelect = document.getElementById('assetSelect');
-            data.forEach(asset => {
-                const option = document.createElement('option');
-                option.value = asset.AssetID; // שינוי כאן לשדה המתאים מהאובייקט asset
-                option.textContent = `Street: ${asset.AssetStreet}, Street Number: ${asset.AssetStreetNumber}, Price: ${asset.AssetPrice}, Type: ${asset.AssetType}`;
-                assetSelect.appendChild(option);
-            });
-        })
-        .catch(error => console.error('Error fetching assets:', error));
+    .then(response => response.json())
+    .then(data => {
+        const assetSelect = document.getElementById('assetSelect');
+        data.forEach(asset => {
+            const option = document.createElement('option');
+            option.value = 'Street: '+asset.AssetStreet +' , Street Number: ' +asset.AssetStreetNumber +', Price: ' + asset.AssetPrice + ', Type: ' + asset.AssetType;
+            option.textContent = option.value;
+            assetSelect.appendChild(option);
+        });
+    })
+    .catch(error => console.error('Error fetching assets:', error));
 
     var form = document.getElementById("meetingForm");
-    form.addEventListener("submit", function(event) {
+    form.addEventListener("submit", function (event) {
         event.preventDefault();
 
-        var partnerField = document.getElementById("partner"); // תיקון כאן ל-ID המתאים
+        var partnerField = document.getElementById("partner");
         var partner = partnerField.value;
 
         var customerID = document.getElementById("customerID").value;
@@ -274,7 +275,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
         var formData = new FormData(form);
         var data = {};
-        formData.forEach(function(value, key) {
+        formData.forEach(function (value, key) {
             data[key] = value;
         });
 
@@ -283,28 +284,29 @@ document.addEventListener("DOMContentLoaded", function() {
         data["meetingType"] = meetingType;
 
         fetch("/addMeeting", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify(data)
-        })
-        .then(function(response) {
-            if (response.ok) {
-                document.getElementById("successMessage").style.display = "block";
-                console.log("Meeting added successfully");
-                setTimeout(function() {
-                    location.reload();
-                }, 3000);
-            } else {
-                console.error("Failed to add meeting");
-            }
-        })
-        .catch(function(error) {
-            console.error("Error:", error);
-        });
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(data)
+            })
+            .then(function (response) {
+                if (response.ok) {
+                    document.getElementById("successMessage").style.display = "block";
+                    console.log("Meeting added successfully");
+                    setTimeout(function () {
+                        location.reload();
+                    }, 3000);
+                } else {
+                    console.error("Failed to add meeting");
+                }
+            })
+            .catch(function (error) {
+                console.error("Error:", error);
+            });
     }
 });
+
 
 
 
