--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -339,44 +339,120 @@
     console.log('Username:', username); // Log the username
 
     fetch(`/meetings-customer?username=${username}`)
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        console.log('Response data:', data); // Log the response data
+        const meetingList = document.getElementById('meetingList');
+        // Check if data is an array before iterating over it
+        if (Array.isArray(data)) {
+            data.forEach(meeting => {
+                const meetingItem = document.createElement('div');
+                meetingItem.classList.add('meeting-item');
+                meetingItem.innerHTML = `
+                    <h4>${meeting.MeetingType}</h4><br><br>
+                    <i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
+                    <i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
+                    <i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
+                    <p class="icon-phone" id="Phone_${meeting._id}">&nbsp;&nbsp;Customer's phone: Fetching...</p><br>
+                    ${meeting.AssetSelect ? `<i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect} <br><br>` : ''}
+                    <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
+                `;
+
+                meetingList.appendChild(meetingItem);
+
+                // Fetch customer data after appending the item
+                fetchCustomerData(meeting.Partner, meeting._id);
+            });
+        } else {
+            console.error('Response data is not an array:', data);
+        }
+    })
+    .catch(error => {
+        console.error('Error fetching meetings:', error);
+        // Handle the error and show an error message to the user
+        const meetingList = document.getElementById('meetingList');
+        meetingList.innerHTML = '<p>Error fetching meetings. Please try again later.</p>';
+    });
+
+const fetchCustomerData = (partner, meetingId) => {
+    if (!partner) {
+        console.error('Partner is empty');
+        return;
+    }
+    fetch(`/Partners?Partner=${partner}`)
         .then(response => {
             if (!response.ok) {
                 throw new Error('Network response was not ok');
             }
             return response.json();
         })
-        .then(data => {
-            console.log('Response data:', data); // Log the response data
-            const meetingList = document.getElementById('meetingList');
-            // Check if data is an array before iterating over it
-            if (Array.isArray(data)) {
-                data.forEach(meeting => {
-                    const meetingItem = document.createElement('div');
-                    meetingItem.classList.add('meeting-item');
-                    meetingItem.innerHTML = `
-                    <h4>${meeting.MeetingType}</h4><br><br>
-                    <i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
-                    <i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
-                    <i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
-                    ${meeting.AssetSelect ? `<i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect} <br><br>` : ''}
-                    <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
-                `;
-
-
-                    meetingList.appendChild(meetingItem);
-                });
+        .then(partner => {
+            if (partner) {
+                const partnerPhone = partner.Phone;
+                const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+                if (partnerPhoneElement) {
+                    partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's phone ${partnerPhone}`;
+                }
             } else {
-                console.error('Response data is not an array:', data);
+                console.error('Partner not found');
+                const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+                if (partnerPhoneElement) {
+                    partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's Phone: Not Available`;
+                }
             }
         })
         .catch(error => {
-            console.error('Error fetching meetings:', error);
-            // Handle the error and show an error message to the user
-            const meetingList = document.getElementById('meetingList');
-            meetingList.innerHTML = '<p>Error fetching meetings. Please try again later.</p>';
+            console.error('Error fetching partners data:', error);
+            const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+            if (partnerPhoneElement) {
+                partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's Phone: Not Available`;
+            }
         });
+};
 });
 
+const fetchCustomerData = (partner, meetingId) => {
+    if (!partner) {
+        console.error('Partner is empty');
+        return;
+    }
+    fetch(`/Partners?Partner=${partner}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(partner => {
+            if (partner) {
+                const partnerPhone = partner.Phone;
+                const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+                if (partnerPhoneElement) {
+                    partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's phone ${partnerPhone}`;
+                }
+            } else {
+                console.error('Partner not found');
+                const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+                if (partnerPhoneElement) {
+                    partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's Phone: Not Available`;
+                }
+            }
+        })
+        .catch(error => {
+            console.error('Error fetching partners data:', error);
+            const partnerPhoneElement = document.getElementById(`Phone_${meetingId}`);
+            if (partnerPhoneElement) {
+                partnerPhoneElement.innerHTML = `&nbsp;&nbsp;Partner's Phone: Not Available`;
+            }
+        });
+};
+
+//
 
 const deleteMeeting = (meetingId) => {
     fetch(`/meeting/${meetingId}`, {
